# zen-steps

./: .gitignore  Cargo.toml  README.md
api/: http-client.env.json  openai.http  status.http
src/: config.rs  error.rs  extract.rs  lib.rs  main.rs  routes.rs  server.rs  shared.rs
src/routes/: open_ai.rs  status.rs
