[package]
name = "zen-steps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# (De)Serialization
serde = "1.0.192"
serde_json = "1.0.108"

# Async and web server
async-recursion = "1.0.5"
futures = "0.3.29"

axum = {version = "0.6.20", features = ["headers", "macros", "json", "ws", "tokio"]}
axum-server = { version = "0.5.1", features = ["tls-rustls"] }

stream-cancel = "0.8.1"

tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"

tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }


# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Env Variables
envy = "0.4.2"

# Self-signed TLS certificates
rcgen = "0.11.3"

# Error Handling
anyhow = "1.0.75"
thiserror = "1.0.50"

chrono = { version = "0.4.31", features = ["serde"]}

reqwest = { version = "0.11.22", features = ["rustls-tls-webpki-roots", "json", "multipart"], default-features = false}

clap = {version = "4.4.7", features = ["derive"]}
strum = { version = "0.25.0", features = ["derive"] }