[package]
name = "zen-steps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# (De)Serialization
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

# Async and web server
async-recursion = "1.0.5"
futures = "0.3.29"

axum = {version = "0.6.20", features = ["headers", "macros", "json", "ws", "tokio"]}
axum-server = { version = "0.5.1", features = ["tls-rustls"] }

stream-cancel = "0.8.1"

tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"

tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }


# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Env Variables
envy = "0.4.2"

# Error Handling
thiserror = "1.0.50"

reqwest = { version = "0.11.22", features = ["rustls-tls-webpki-roots", "json", "multipart"], default-features = false}

openai-api-rs = "2.1.0"
chrono = { version = "0.4.31", features = ["serde"]}